Remove verbose comments and fix line breaks in assets

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -14,7 +14,8 @@ body {
   line-height: 30px;
 }
 
-h1, p {
+h1,
+p {
   margin-bottom: 1em;
 }
 
@@ -98,7 +99,9 @@ summary:before {
   margin-bottom: 0.25em;
 }
 
-.profile a, .api-key summary, .sign-out button {
+.profile a,
+.api-key summary,
+.sign-out button {
   background: none;
   padding: 0;
   font: inherit;
@@ -168,7 +171,8 @@ label {
   display: block;
 }
 
-input[type='text'], .input-with-extra {
+input[type='text'],
+.input-with-extra {
   font-size: 1em;
   line-height: 1em;
   font-family: sans-serif;
@@ -268,7 +272,8 @@ h2, h3 {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0), #fff);
 }
 
-#documents .user, #documents .partial-path {
+#documents .user,
+#documents .partial-path {
   display: inline-block;
   font-style: normal;
   color: #333;
@@ -281,20 +286,12 @@ h2, h3 {
   display: inline-block;
 }
 
-#documents .user:after, #documents .partial-path *:after {
+#documents .user:after,
+#documents .partial-path *:after {
   display: inline-block;
   content: "/";
   margin: 0 -4px 0 0;
   color: #ccc;
-  /*
-  content: " ";
-  width: 0;
-  height: 0;
-  border: 4px solid transparent;
-  border-left-color: #ccc;
-  margin-right: -4px;
-  margin-left: 1ex;
-  */
 }
 
 #documents .title {
@@ -332,7 +329,8 @@ h2, h3 {
   line-height: 1.5em;
 }
 
-#documents aside a, #documents aside button.link:not(.destructive) {
+#documents aside a,
+#documents aside button.link:not(.destructive) {
   color: inherit;
 }
 
@@ -353,7 +351,8 @@ h2, h3 {
   color: #99e;
 }
 
-#editor, #editor * {
+#editor,
+#editor * {
   font-family: monospace;
   font-size: 1em;
 }
